src/JavPy.java
/* Generated By:JavaCC: Do not edit this line. JavPy.java */

import syntaxtree.*;
import syntaxtree.Class;

import java.util.ArrayList;

public class JavPy implements JavPyConstants {

    static final private int[] jj_la1 = new int[30];
    static final private JJCalls[] jj_2_rtns = new JJCalls[22];
    static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
    /**
     * Generated Token Manager.
     */
    static public JavPyTokenManager token_source;
    /**
     * Current token.
     */
    static public Token token;
    /**
     * Next token.
     */
    static public Token jj_nt;
    static SimpleCharStream jj_input_stream;
    static private boolean jj_initialized_once = false;
    static private int jj_ntk;
    static private Token jj_scanpos, jj_lastpos;
    static private int jj_la;
    static private int jj_gen;
    static private int[] jj_la1_0;
    static private int[] jj_la1_1;
    static private boolean jj_rescan = false;
    static private int jj_gc = 0;
    static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
    static private int[] jj_expentry;
    static private int jj_kind = -1;
    static private int[] jj_lasttokens = new int[100];
    static private int jj_endpos;

    static {
        jj_la1_init_0();
        jj_la1_init_1();
    }

    /**
     * Constructor with InputStream.
     */
    public JavPy(java.io.InputStream stream) {
        this(stream, null);
    }

    /**
     * Constructor with InputStream and supplied encoding
     */
    public JavPy(java.io.InputStream stream, String encoding) {
        if (jj_initialized_once) {
            System.out.println("ERROR: Second call to constructor of static parser.  ");
            System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }
        jj_initialized_once = true;
        try {
            jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new JavPyTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 30; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor.
     */
    public JavPy(java.io.Reader stream) {
        if (jj_initialized_once) {
            System.out.println("ERROR: Second call to constructor of static parser. ");
            System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }
        jj_initialized_once = true;
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new JavPyTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 30; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor with generated Token Manager.
     */
    public JavPy(JavPyTokenManager tm) {
        if (jj_initialized_once) {
            System.out.println("ERROR: Second call to constructor of static parser. ");
            System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }
        jj_initialized_once = true;
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 30; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    static final public Program Program() throws ParseException {
        ArrayList<Class> classList = new ArrayList<Class>();
        ArrayList<Function> funcList = new ArrayList<Function>();
        ArrayList<Stm> stmList = new ArrayList<Stm>();
        Class c;
        Function f;
        Stm s;
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LBRACE:
                case CLASS:
                case FUNC:
                case IF:
                case WHILE:
                case FOR:
                case RETURN:
                case PRINT:
                case ID:
                    ;
                    break;
                default:
                    jj_la1[0] = jj_gen;
                    break label_1;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CLASS:
                    c = Class();
                    classList.add(c);
                    break;
                case FUNC:
                    f = Function();
                    funcList.add(f);
                    break;
                case LBRACE:
                case IF:
                case WHILE:
                case FOR:
                case RETURN:
                case PRINT:
                case ID:
                    s = Stm();
                    stmList.add(s);
                    break;
                default:
                    jj_la1[1] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        jj_consume_token(0);
        {
            if (true) return new Program(funcList, stmList, classList);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Class Class() throws ParseException {
        String id;
        ArrayList<Class> cl = new ArrayList<Class>();
        ArrayList<Var> vl = new ArrayList<Var>();
        ArrayList<Function> fl = new ArrayList<Function>();
        Var v;
        Class c;
        Function f;
        jj_consume_token(CLASS);
        jj_consume_token(ID);
        id = token.image;
        jj_consume_token(LBRACE);
        label_2:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CLASS:
                case FUNC:
                case ID:
                    ;
                    break;
                default:
                    jj_la1[2] = jj_gen;
                    break label_2;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CLASS:
                    c = Class();
                    cl.add(c);
                    break;
                case ID:
                    v = Var();
                    vl.add(v);
                    break;
                case FUNC:
                    f = Function();
                    fl.add(f);
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        jj_consume_token(RBRACE);
        {
            if (true) return new Class(id, cl, vl, fl);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Function Function() throws ParseException {
        String id;
        ArrayList<Param> pl;
        ArrayList<Stm> stmList = new ArrayList<Stm>();
        Stm stm;
        jj_consume_token(FUNC);
        jj_consume_token(ID);
        id = token.image;
        jj_consume_token(LPAREN);
        pl = ParamList();
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        label_3:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LBRACE:
                case IF:
                case WHILE:
                case FOR:
                case RETURN:
                case PRINT:
                case ID:
                    ;
                    break;
                default:
                    jj_la1[4] = jj_gen;
                    break label_3;
            }
            stm = Stm();
            stmList.add(stm);
        }
        jj_consume_token(RBRACE);
        {
            if (true) return new Function(id, pl, stmList);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Param Param() throws ParseException {
        String id;
        jj_consume_token(ID);
        id = token.image;
        {
            if (true) return new Param(id);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Var Var() throws ParseException {
        Exp e = null;
        String id;
        jj_consume_token(ID);
        id = token.image;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case COLON:
                jj_consume_token(COLON);
                jj_consume_token(ASSIGN);
                e = Exp();
                break;
            default:
                jj_la1[5] = jj_gen;
                ;
        }
        {
            if (true) return new Var(e, id, false);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Stm Stm() throws ParseException {
        Stm stm;
        Exp e1, e2;
        String id;
        ArrayList<String> strList = new ArrayList<String>();
        ArrayList<Stm> stmList = new ArrayList<Stm>();
        ArrayList<Exp> el = new ArrayList<Exp>();
        boolean isObject = true;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LBRACE:
                jj_consume_token(LBRACE);
                label_4:
                while (true) {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case LBRACE:
                        case IF:
                        case WHILE:
                        case FOR:
                        case RETURN:
                        case PRINT:
                        case ID:
                            ;
                            break;
                        default:
                            jj_la1[6] = jj_gen;
                            break label_4;
                    }
                    stm = Stm();
                    stmList.add(stm);
                }
                jj_consume_token(RBRACE);
            {
                if (true) return new CompoundStm(stmList);
            }
            break;
            case IF:
                jj_consume_token(IF);
                e1 = Exp();
                el.add(e1);
                stm = Stm();
                stmList.add(stm);
                label_5:
                while (true) {
                    if (jj_2_1(2)) {
                        ;
                    } else {
                        break label_5;
                    }
                    jj_consume_token(ELIF);
                    e1 = Exp();
                    el.add(e1);
                    stm = Stm();
                    stmList.add(stm);
                }
                if (jj_2_2(2)) {
                    jj_consume_token(ELSE);
                    stm = Stm();
                    stmList.add(stm);
                } else {
                    ;
                }
            {
                if (true) return new If(el, stmList);
            }
            break;
            default:
                jj_la1[7] = jj_gen;
                if (jj_2_3(4)) {
                    jj_consume_token(FOR);
                    jj_consume_token(ID);
                    id = token.image;
                    jj_consume_token(IN);
                    jj_consume_token(RANGE);
                    jj_consume_token(LPAREN);
                    el = ExpList();
                    jj_consume_token(RPAREN);
                    stm = Stm();
                    {
                        if (true) return new ForLoopExp(el, stm, id);
                    }
                } else {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case FOR:
                            jj_consume_token(FOR);
                            jj_consume_token(ID);
                            id = token.image;
                            jj_consume_token(IN);
                            e1 = Exp();
                            stm = Stm();
                        {
                            if (true) return new ForLoopExp(e1, stm, id);
                        }
                        break;
                        case WHILE:
                            jj_consume_token(WHILE);
                            e1 = Exp();
                            stm = Stm();
                        {
                            if (true) return new WhileExp(e1, stm);
                        }
                        break;
                        case PRINT:
                            jj_consume_token(PRINT);
                            el = ExpList();
                        {
                            if (true) return new PrintStm(el);
                        }
                        break;
                        default:
                            jj_la1[8] = jj_gen;
                            if (jj_2_4(4)) {
                                jj_consume_token(ID);
                                id = token.image;
                                jj_consume_token(COLON);
                                jj_consume_token(ASSIGN);
                                e1 = Exp();
                                {
                                    if (true) return new Var(e1, id, false);
                                }
                            } else if (jj_2_5(4)) {
                                jj_consume_token(ID);
                                id = token.image;
                                jj_consume_token(COLON);
                                jj_consume_token(ASSIGN);
                                jj_consume_token(NEW);
                                e1 = classCall();
                                {
                                    if (true) return new Var(e1, id, isObject);
                                }
                            } else if (jj_2_6(2)) {
                                jj_consume_token(ID);
                                id = token.image;
                                jj_consume_token(LSQPAREN);
                                e1 = Exp();
                                jj_consume_token(RSQPAREN);
                                jj_consume_token(ASSIGN);
                                e2 = Exp();
                                {
                                    if (true) return new ArrSet(id, e1, e2);
                                }
                            } else if (jj_2_7(3)) {
                                jj_consume_token(ID);
                                id = token.image;
                                jj_consume_token(DOT);
                                jj_consume_token(ADD);
                                jj_consume_token(LPAREN);
                                e1 = Exp();
                                jj_consume_token(RPAREN);
                                {
                                    if (true) return new ArrAdd(id, e1);
                                }
                            } else if (jj_2_8(3)) {
                                jj_consume_token(ID);
                                id = token.image;
                                jj_consume_token(DOT);
                                jj_consume_token(INSERT);
                                jj_consume_token(LPAREN);
                                e1 = Exp();
                                jj_consume_token(COMMA);
                                e2 = Exp();
                                jj_consume_token(RPAREN);
                                {
                                    if (true) return new ArrInsert(id, e1, e2);
                                }
                            } else if (jj_2_9(2)) {
                                jj_consume_token(ID);
                                id = token.image;
                                jj_consume_token(ASSIGN);
                                e1 = Exp();
                                {
                                    if (true) return new AssignStm(id, e1);
                                }
                            } else if (jj_2_10(3)) {
                                jj_consume_token(ID);
                                id = token.image;
                                jj_consume_token(DOT);
                                jj_consume_token(PUT);
                                jj_consume_token(LPAREN);
                                e1 = Exp();
                                jj_consume_token(COMMA);
                                e2 = Exp();
                                jj_consume_token(RPAREN);
                                {
                                    if (true) return new DictPut(id, e1, e2);
                                }
                            } else if (jj_2_11(2)) {
                                jj_consume_token(ID);
                                strList.add(token.image);
                                jj_consume_token(DOT);
                                jj_consume_token(ID);
                                strList.add(token.image);
                                jj_consume_token(ASSIGN);
                                e2 = Exp();
                                {
                                    if (true) return new ClassVarAssign(strList, e2);
                                }
                            } else if (jj_2_12(3)) {
                                jj_consume_token(ID);
                                id = token.image;
                                jj_consume_token(ASSIGN);
                                jj_consume_token(NEW);
                                e1 = classCall();
                                {
                                    if (true) return new AssignStm(id, e1);
                                }
                            } else {
                                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                                    case RETURN:
                                        jj_consume_token(RETURN);
                                        e1 = Exp();
                                    {
                                        if (true) return new ReturnStm(e1);
                                    }
                                    break;
                                    default:
                                        jj_la1[9] = jj_gen;
                                        jj_consume_token(-1);
                                        throw new ParseException();
                                }
                            }
                    }
                }
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp Exp() throws ParseException {
        Exp e;
        e = LogExp();
        {
            if (true) return e;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp LogExp() throws ParseException {
        Exp e1, e2;
        String id;
        e1 = EqualityExp();
        label_6:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case AND:
                case OR:
                    ;
                    break;
                default:
                    jj_la1[10] = jj_gen;
                    break label_6;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case OR:
                    jj_consume_token(OR);
                    break;
                case AND:
                    jj_consume_token(AND);
                    break;
                default:
                    jj_la1[11] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            id = token.image;
            e2 = EqualityExp();
            e1 = new LogExp(id, e1, e2);
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp EqualityExp() throws ParseException {
        Exp e1, e2;
        String id;
        e1 = RelExp();
        label_7:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case EQUALITY:
                case NOTEQUAL:
                    ;
                    break;
                default:
                    jj_la1[12] = jj_gen;
                    break label_7;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case EQUALITY:
                    jj_consume_token(EQUALITY);
                    break;
                case NOTEQUAL:
                    jj_consume_token(NOTEQUAL);
                    break;
                default:
                    jj_la1[13] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            id = token.image;
            e2 = RelExp();
            e1 = new Equal(id, e1, e2);
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp RelExp() throws ParseException {
        Exp e1, e2;
        String id;
        e1 = addMinus();
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case ST:
            case STEQ:
            case GT:
            case GTEQ:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case ST:
                        jj_consume_token(ST);
                        break;
                    case GT:
                        jj_consume_token(GT);
                        break;
                    case GTEQ:
                        jj_consume_token(GTEQ);
                        break;
                    case STEQ:
                        jj_consume_token(STEQ);
                        break;
                    default:
                        jj_la1[14] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
                id = token.image;
                e2 = addMinus();
                e1 = new Compare(id, e1, e2);
                break;
            default:
                jj_la1[15] = jj_gen;
                ;
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp addMinus() throws ParseException {
        Exp e1, e2;
        String id;
        e1 = multiDiv();
        label_8:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PLUS:
                case MINUS:
                    ;
                    break;
                default:
                    jj_la1[16] = jj_gen;
                    break label_8;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PLUS:
                    jj_consume_token(PLUS);
                    break;
                case MINUS:
                    jj_consume_token(MINUS);
                    break;
                default:
                    jj_la1[17] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            id = token.image;
            e2 = multiDiv();
            e1 = new OpExp(id, e1, e2);
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp multiDiv() throws ParseException {
        Exp e1, e2;
        String id;
        e1 = power();
        label_9:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case MULTI:
                case DIVIDE:
                case MOD:
                    ;
                    break;
                default:
                    jj_la1[18] = jj_gen;
                    break label_9;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case MULTI:
                    jj_consume_token(MULTI);
                    break;
                case DIVIDE:
                    jj_consume_token(DIVIDE);
                    break;
                case MOD:
                    jj_consume_token(MOD);
                    break;
                default:
                    jj_la1[19] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            id = token.image;
            e2 = power();
            e1 = new OpExp(id, e1, e2);
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp power() throws ParseException {
        Exp e1, e2;
        String id;
        e1 = negation();
        label_10:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case POWER:
                    ;
                    break;
                default:
                    jj_la1[20] = jj_gen;
                    break label_10;
            }
            jj_consume_token(POWER);
            id = token.image;
            e2 = negation();
            e1 = new OpExp(id, e1, e2);
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp negation() throws ParseException {
        Exp e;
        boolean negate = false;
        label_11:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case NOT:
                    ;
                    break;
                default:
                    jj_la1[21] = jj_gen;
                    break label_11;
            }
            jj_consume_token(NOT);
            negate = !negate;
        }
        e = cmpElement();
        if (negate) {
            {
                if (true) return new Not(e);
            }
        } else {
            {
                if (true) return e;
            }
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp cmpElement() throws ParseException {
        Exp e1, e2;
        String id;
        e1 = element();
        label_12:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LSQPAREN:
                case DOT:
                    ;
                    break;
                default:
                    jj_la1[22] = jj_gen;
                    break label_12;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LSQPAREN:
                    jj_consume_token(LSQPAREN);
                    e2 = Exp();
                    jj_consume_token(RSQPAREN);
                {
                    if (true) return new ArrGet(e1, e2);
                }
                break;
                default:
                    jj_la1[23] = jj_gen;
                    if (jj_2_13(2)) {
                        jj_consume_token(DOT);
                        jj_consume_token(CONTAINS);
                        jj_consume_token(LPAREN);
                        e2 = Exp();
                        jj_consume_token(RPAREN);
                        {
                            if (true) return new ArrContains(e1, e2);
                        }
                    } else if (jj_2_14(2)) {
                        jj_consume_token(DOT);
                        jj_consume_token(LENGTH);
                        {
                            if (true) return new ArrLength(e1);
                        }
                    } else if (jj_2_15(2)) {
                        jj_consume_token(DOT);
                        jj_consume_token(INDEXOF);
                        jj_consume_token(LPAREN);
                        e2 = Exp();
                        jj_consume_token(RPAREN);
                        {
                            if (true) return new ArrIndexOf(e1, e2);
                        }
                    } else if (jj_2_16(2)) {
                        jj_consume_token(DOT);
                        jj_consume_token(REMOVEFIRST);
                        jj_consume_token(LPAREN);
                        jj_consume_token(RPAREN);
                        {
                            if (true) return new ArrRemoveFirst(e1);
                        }
                    } else if (jj_2_17(2)) {
                        jj_consume_token(DOT);
                        jj_consume_token(ISEMPTY);
                        jj_consume_token(LPAREN);
                        jj_consume_token(RPAREN);
                        {
                            if (true) return new ArrEmpty(e1);
                        }
                    } else if (jj_2_18(3)) {
                        jj_consume_token(DOT);
                        e2 = procedureCall();
                        {
                            if (true) return new ClassFuncExp(e1, e2);
                        }
                    } else if (jj_2_19(2)) {
                        jj_consume_token(DOT);
                        jj_consume_token(ID);
                        id = token.image;
                        {
                            if (true) return new ClassVarExp(e1, id);
                        }
                    } else if (jj_2_20(2)) {
                        jj_consume_token(DOT);
                        jj_consume_token(KEYS);
                        jj_consume_token(LPAREN);
                        jj_consume_token(RPAREN);
                        {
                            if (true) return new DictKeys(e1);
                        }
                    } else if (jj_2_21(2)) {
                        jj_consume_token(DOT);
                        jj_consume_token(GET);
                        jj_consume_token(LPAREN);
                        e2 = Exp();
                        jj_consume_token(RPAREN);
                        {
                            if (true) return new DictGet(e1, e2);
                        }
                    } else {
                        jj_consume_token(-1);
                        throw new ParseException();
                    }
            }
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }
